--- a/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.html
+++ b/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.html
@@ -33,7 +33,7 @@
         <app-scoreboard-display
           [data]="data()"
           [gameClock]="gameClockSeconds()"
-          [playClock]="playClockSeconds()"
+          [playClock]="playClockDisplay()"
           displayClass="scoreboard"
         />
       </section>
