--- a/src/app/features/scoreboard/pages/view/scoreboard-view.component.html
+++ b/src/app/features/scoreboard/pages/view/scoreboard-view.component.html
@@ -51,7 +51,7 @@
     <app-scoreboard-display
       [data]="data()"
       [gameClock]="gameClockSeconds()"
-      [playClock]="playClockSeconds()"
+      [playClock]="playClockDisplay()"
       [tournamentLogo]="tournamentLogo()"
       [tournamentSponsorLogo]="tournamentSponsorLogo()"
       displayClass="fullhd-scoreboard"
