--- a/src/app/features/persons/components/create/person-create.component.html
+++ b/src/app/features/persons/components/create/person-create.component.html
@@ -53,21 +53,14 @@
     </div>
 
     <div class="person-create__field">
-      <label for="person_photo" class="person-create__label">Photo</label>
-      <input
-        id="person_photo"
-        type="file"
-        (change)="onFileSelected($event)"
-        class="person-create__file"
-        accept="image/*"
+      <app-image-upload
+        label="Photo"
+        mode="three-size"
+        [currentUrls]="photoPreviewUrls()"
+        [uploading]="photoUploadLoading()"
+        (upload)="onPhotoUpload($event)"
+        (remove)="onPhotoRemove()"
       />
-      @if (photoUploadLoading()) {
-        <div class="person-create__loading">Uploading photo...</div>
-      } @else if (photoPreviewUrls()?.webview) {
-        <div class="person-create__preview">
-          <img [src]="photoPreviewUrls()!.webview" alt="Photo preview" class="person-create__preview-image" />
-        </div>
-      }
     </div>
   </form>
 </div>
