--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.less
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.less
@@ -216,7 +216,7 @@
 }
 
 .team-logo {
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 100px;
@@ -225,6 +225,7 @@
   overflow: hidden;
 
   img {
+    display: block;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
