--- a/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.less
+++ b/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.less
@@ -1,3 +1,9 @@
+:host {
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+}
+
 .sponsor-display-flat {
   display: flex;
   align-items: center;
