--- a/src/app/features/sponsors/components/sponsor-lines-list/sponsor-lines-list.component.html
+++ b/src/app/features/sponsors/components/sponsor-lines-list/sponsor-lines-list.component.html
@@ -19,7 +19,13 @@
   } @else {
     <div class="sponsor-lines-list__items">
       @for (line of sponsorLines(); track line.id) {
-        <div class="sponsor-lines-list__card" tuiAppearance="floating" tuiCardLarge tuiCell="l">
+        <a
+          class="sponsor-lines-list__card"
+          tuiAppearance="floating"
+          tuiCardLarge
+          tuiCell="l"
+          [routerLink]="['/sponsor-lines', line.id]"
+        >
           <div class="sponsor-lines-list__info">
             <div class="sponsor-lines-list__name">{{ line.title || 'Sponsor Line' }}</div>
             <div class="sponsor-lines-list__meta">
@@ -32,7 +38,7 @@
               </tui-badge>
             </div>
           </div>
-        </div>
+        </a>
       }
     </div>
 
